segundo commit do site

--- a/faleconosco/index.html
+++ b/faleconosco/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>fale conosco</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/lucide@latest"></script>
 </head>
@@ -69,23 +69,23 @@
 
                 <div class="contactos__Lista">
                     <div class="contactos__item">
-                        <i  color="red" data-lucide="phone"></i>
+                        <i  color="#444860" data-lucide="phone"></i>
                         <span>+258 84 555 32 32 1</span>
                     </div>
                     <div class="contactos__item">
-                        <i  color="red" data-lucide="phone"></i>
+                        <i  color="#444860" data-lucide="phone-call"></i>
                         <span>+258 84 334 32 32 1</span>
                     </div>
                     <div class="contactos__item">
-                        <i  color="red" data-lucide="phone"></i>
+                        <i  color="#444860" data-lucide="mail"></i>
                         <span>nairaschool@gmail.com</span>
                     </div>
                     <div class="contactos__item">
-                        <i  color="red" data-lucide="phone"></i>
-                        <span>maputo bls bla vla</span>
+                        <i  color="#444860" data-lucide="map-pin"></i>
+                        <span>Moçambique, Maputo, Av. Albert Lithuli No 408/ 418</span>
                     </div>
                     <div class="contactos__item">
-                        <i  color="red" data-lucide="phone"></i>
+                        <i  color="#444860" data-lucide="chrome"></i>
                         <span>www.nairaschoolsuporte.com/mz</span>
                     </div>
                 </div>
