segundo commit do site

--- a/quemsomos/index.html
+++ b/quemsomos/index.html
@@ -20,6 +20,9 @@
                         <a href="../cursos/index.html">cursos</a>
                     </li>
                     <li>
+                        <a href="../estudante/index.html">estudante</a>
+                    </li>
+                    <li>
                         <a href="#">quem somos</a>
                     </li>
                     <li>
