--- a/quemsomos/index.html
+++ b/quemsomos/index.html
@@ -137,6 +137,76 @@
         </div>
     </main>
 
+
+    <footer>
+        <div class="footer__container">
+            <div class="footer__container__content">
+                <div class="footer__about">
+                    <h1>naira school</h1>
+                    <p>
+                        Na nossa plataforma, acreditamos que o conhecimento é
+                         a chave para um futuro brilhante. Estamos aqui para ajudar 
+                         você a transformar desafios em conquistas,
+                         aprendendo e crescendo a cada passo. Juntos, podemos
+                          alcançar seu pleno potencial!
+                    </p>
+                    <div class="footer__about__social__media">
+                        <div class="footer__about__social__media__area">
+                            <i  color="#444860" data-lucide="facebook"></i>
+                        </div>
+                        <div class="footer__about__social__media__area">
+                            <i  color="#444860" data-lucide="twitter"></i>
+                        </div>
+                        <div class="footer__about__social__media__area">
+                            <i  color="#444860" data-lucide="youtube"></i>
+                        </div>
+                        <div class="footer__about__social__media__area">
+                            <i  color="#444860" data-lucide="instagram"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer__links">
+                    <h1>links</h1>
+                    <div class="footer__links__content">
+                        <a href="#">home</a>
+                        <a href="#">cursos</a>
+                        <a href="#">blog</a>
+                        <a href="#">contactos</a>
+                    </div>
+                </div>
+
+                <div class="footer__contactos">
+                    <h1>contactos</h1>
+                    <div class="footer__contactos__content">
+                        <span>
+
+                        </span>
+                        <span>nairaschool@gmail.com</span>
+                        <span>+258 842444442</span>
+                        <span>+258 862444662</span>
+                    </div>
+                </div>
+
+                <div class="newsletter__footer">
+                    <h1>newsletter</h1>
+                    <p>
+                        Fique por dentro das últimas novidades, dicas de estudo e atualizações da nossa plataforma 
+                        com a nossa newsletter. Receba conteúdo exclusivo direto no seu e-mail e aproveite ao máximo
+                        os recursos que oferecemos. Não perca nenhuma oportunidade de aprender e crescer.
+                        Inscreva-se agora e faça parte dessa jornada!
+                    </p>
+                    <div class="footer__form__container">
+                        <input type="text" placeholder="digite teu email">
+                        <button>submeter</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="footer__footer">
+                <h1 >Copyright © 2024. All rights reserved.</h1>
+            </div>
+        </div>
+    </footer>
   
 
     <script src="https://unpkg.com/lucide@latest"></script>
