--- a/cursos/index.html
+++ b/cursos/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cursos</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://unpkg.com/lucide@latest"></script>
 </head>
 <body>
     <header>
@@ -45,24 +46,27 @@
         </div>
     </header>
     <div class="container__beneficios">
-        <h1>por escolher</h1>
-        <span>a choice thar makes the diference</span>
+        <h1>Porque escolher-nos</h1>
+        <span>uma escolha que faz a diferença</span>
         <div class="container__beneficios__content">
             <div class="beneficio__content">
                 <div class="beneficio__icon">
+                    <i  color="#fff" data-lucide="person-standing"></i>
                 </div>
-                <h2>hight experienced</h2>
+                <h2>Altamente experiente</h2>
             </div>
             <div class="beneficio__content">
                 <div class="beneficio__icon">
+                    <i  color="#fff" data-lucide="speech"></i>
                 </div>
-                <h2>hight experienced</h2>
+                <h2>Suporte dedicado</h2>
             </div>
             <div class="beneficio__content">
                 <div class="beneficio__icon">
+                    <i  color="#fff" data-lucide="file-sliders"></i>
                 </div>
-                <h2>hight experienced</h2>
-            </div>
+                <h2>questionários e Quiz</h2>
+            </div> 
         </div>
     </div>
     <div class="course__popular">
@@ -82,7 +86,7 @@
                     <div class="course__content">
                         <div class="name__course__stars">
                             <h2>marketing digital</h2>
-                            <span>5.0*</span>
+                            <span>5.0 *</span>
                         </div>
                         <div class="course__info">
                             <h2>aprenda a construir de sites bonitos e responsivivos</h2>
@@ -403,38 +407,113 @@
             <div class="cards__courses__concluisition__Benificents">
                 <div class="card__course__conclusition__beneficent">
                     <div class="card__course__conclusition__beneficent__icon"></div>
-                    <h2>emissao de certificados</h2>
+                    <h2>Desenvolvimento de Habilidades Práticas</h2>
                     <span>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                         Adipisci incidunt, a praesentium doloremque 
+                        Nossos cursos garantem que você adquira competências aplicáveis 
+                        a situações reais e desafios do dia a dia. 
                     </span>
                 </div>
                 <div class="card__course__conclusition__beneficent">
                     <div class="card__course__conclusition__beneficent__icon"></div>
-                    <h2>emissao de certificados</h2>
+                    <h2>Oportunidades de Networking</h2>
                     <span>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                         Adipisci incidunt, a praesentium doloremque 
+                        Conecte-se com outros estudantes e profissionais para expandir suas oportunidades de carreira
                     </span>
                 </div>
                 <div class="card__course__conclusition__beneficent">
                     <div class="card__course__conclusition__beneficent__icon"></div>
-                    <h2>emissao de certificados</h2>
+                    <h2>Acesso a Recursos Exclusivos</h2>
                     <span>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                         Adipisci incidunt, a praesentium doloremque 
+
+                        Continue acessando materiais avançados e atualizados mesmo após o término do curso.
                     </span>
                 </div>
                 <div class="card__course__conclusition__beneficent">
                     <div class="card__course__conclusition__beneficent__icon"></div>
-                    <h2>emissao de certificados</h2>
+                    <h2>Certificação Reconhecida</h2>
                     <span>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                         Adipisci incidunt, a praesentium doloremque 
+                        Ao concluir nossos cursos, 
+                        você receberá certificados que destacam suas habilidades
+                         e impulsionam seu currículo.
                     </span>
                 </div>
             </div>
         </div>
     </div>
+
+    <footer>
+        <div class="footer__container">
+            <div class="footer__container__content">
+                <div class="footer__about">
+                    <h1>naira school</h1>
+                    <p>
+                        Na nossa plataforma, acreditamos que o conhecimento é
+                         a chave para um futuro brilhante. Estamos aqui para ajudar 
+                         você a transformar desafios em conquistas,
+                         aprendendo e crescendo a cada passo. Juntos, podemos
+                          alcançar seu pleno potencial!
+                    </p>
+                    <div class="footer__about__social__media">
+                        <div class="footer__about__social__media__area">
+                            <i  color="#444860" data-lucide="facebook"></i>
+                        </div>
+                        <div class="footer__about__social__media__area">
+                            <i  color="#444860" data-lucide="twitter"></i>
+                        </div>
+                        <div class="footer__about__social__media__area">
+                            <i  color="#444860" data-lucide="youtube"></i>
+                        </div>
+                        <div class="footer__about__social__media__area">
+                            <i  color="#444860" data-lucide="instagram"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer__links">
+                    <h1>links</h1>
+                    <div class="footer__links__content">
+                        <a href="#">home</a>
+                        <a href="#">cursos</a>
+                        <a href="#">blog</a>
+                        <a href="#">contactos</a>
+                    </div>
+                </div>
+
+                <div class="footer__contactos">
+                    <h1>contactos</h1>
+                    <div class="footer__contactos__content">
+                        <span>
+
+                        </span>
+                        <span>nairaschool@gmail.com</span>
+                        <span>+258 842444442</span>
+                        <span>+258 862444662</span>
+                    </div>
+                </div>
+
+                <div class="newsletter__footer">
+                    <h1>newsletter</h1>
+                    <p>
+                        Fique por dentro das últimas novidades, dicas de estudo e atualizações da nossa plataforma 
+                        com a nossa newsletter. Receba conteúdo exclusivo direto no seu e-mail e aproveite ao máximo
+                        os recursos que oferecemos. Não perca nenhuma oportunidade de aprender e crescer.
+                        Inscreva-se agora e faça parte dessa jornada!
+                    </p>
+                    <div class="footer__form__container">
+                        <input type="text" placeholder="digite teu email">
+                        <button>submeter</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="footer__footer">
+                <h1 >Copyright © 2024. All rights reserved.</h1>
+            </div>
+        </div>
+    </footer>
+    
+    <script src="https://unpkg.com/lucide@latest"></script>
+    <script>
+      lucide.createIcons();
+    </script>
 </body>
 </html>
