adcionando mais conteudo

--- a/estudante/index.html
+++ b/estudante/index.html
@@ -20,7 +20,7 @@
                         <a href="../cursos/index.html">cursos</a>
                     </li>
                     <li>
-                        <a href="#">estudante</a>
+                        <a class="selected"  href="#">estudante</a>
                     </li>
                     <li>
                         <a href="../quemsomos/index.html">quem somos</a>
@@ -45,10 +45,10 @@
             </div>
             <div class="content__header__conteudo">
                 <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                    Aspernatur officia ut accusamus voluptate placeat molestias 
-                    consequuntur. Laboriosam magnam, autem soluta dolorem minus
-                    iste voluptatem corrupti, hic temporibus deleniti, excepturi sint?
+                    Prepare-se para conquistar sua meta.
+                    Tenha suporte completo na sua jornada.
+                    Estude com confiança e determinação.
+                    Transforme esforço em resultados reais.
                 </p>
 
                 <div class="content__header__conteudo__container">
@@ -70,11 +70,11 @@
                     mais 70 mil estudantes cadastrados
                 </h1>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                    Soluta, maiores cupiditate ea, inventore quas aliquid quasi 
-                    expedita modi
-                     atque rerum ipsum ullam impedit maxime dolores saepe est 
-                     totam officia alias!
+                    Transforme completamente a forma como você estuda.
+                    Tenha acesso exclusivo às melhores ferramentas disponíveis.
+                    Explore conteúdos personalizados para suas necessidades.
+                    Ganhe confiança e atinja seus maiores objetivos.
+                    Junte-se à nossa comunidade de sucesso agora mesmo!
                 </p>
             </div>
             <div class="container__info__content__dash">
@@ -117,16 +117,16 @@
                 <img src="../assets/image8.jpg" alt="" loading="lazy">
             </div>
             <div class="content__container__info__one__info__right">
-                <h2>a melhor forma de aprender e praticando</h2>
+                <h2>Transforme completamente a forma como você estuda.</h2>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                     Eaque voluptates praesentium sequi adipisci totam cumque, 
-                     facere nemo minima laudantium quasi non debitis necessitatibus 
-                    reiciendis recusandae aliquam ut harum provident libero!
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Eaque voluptates praesentium sequi adipisci totam cumque, 
-                    facere nemo minima laudantium quasi non debitis necessitatibus 
-                   reiciendis recusandae aliquam ut harum provident libero!
+                    Aproveite ao máximo sua jornada educacional com ferramentas 
+                    inovadoras e conteúdo exclusivo que atendem às suas necessidades.
+                    Nossa plataforma foi criada para garantir uma aprendizagem mais
+                    eficiente, dinâmica e prática, proporcionando uma experiência única.
+                    Seja você iniciante ou avançado, oferecemos tudo o que você precisa
+                    para dominar os tópicos e alcançar seus objetivos. 
+                    Não perca mais tempo, comece a trilhar o caminho para o sucesso
+                    acadêmico agora mesmo.
                 </p>
             </div>
         </div>
@@ -137,16 +137,14 @@
                 <img src="../assets/image10.jpg" alt="">
             </div>
             <div class="content__container__info__one__info__right">
-                <h2>a melhor forma de aprender e praticando</h2>
+                <h2>Sua Aprovação Está ao Seu Alcance</h2>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                     Eaque voluptates praesentium sequi adipisci totam cumque, 
-                     facere nemo minima laudantium quasi non debitis necessitatibus 
-                    reiciendis recusandae aliquam ut harum provident libero!
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Eaque voluptates praesentium sequi adipisci totam cumque, 
-                    facere nemo minima laudantium quasi non debitis necessitatibus 
-                   reiciendis recusandae aliquam ut harum provident libero!
+                    Nossa plataforma foi projetada para preparar você de forma prática e 
+                    eficaz para qualquer prova ou exame. Com materiais didáticos de alta qualidade, 
+                    simulados realistas e dicas valiosas, garantimos que você tenha todo o suporte 
+                    necessário. Cada recurso foi pensado para otimizar seu tempo de estudo e aumentar 
+                    suas chances de sucesso. Estamos ao seu lado em cada passo,
+                    para que você se sinta confiante e preparado para conquistar os resultados que deseja.
                 </p>
             </div>
         </div>
