--- a/faleconosco/index.html
+++ b/faleconosco/index.html
@@ -23,10 +23,10 @@
                         <a href="../estudante/index.html">estudante</a>
                     </li>
                     <li>
-                        <a href="../quemsomos/index.html">quem somos</a>
+                        <a  href="../quemsomos/index.html">quem somos</a>
                     </li>
                     <li>
-                        <a href="#">fale conosco</a>
+                        <a class="selected"  href="#">fale conosco</a>
                     </li>
                     <li>
                         <a href="../blog/index.html">blog</a>
