--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <h1 class="website__title">naira school</h1>
                 <ul>
                     <li>
-                        <a href="#">inicio</a>
+                        <a class="selected" href="#">inicio</a>
                     </li>
                     <li>
                         <a href="./cursos/index.html">cursos</a>
