--- a/faleconosco/index.html
+++ b/faleconosco/index.html
@@ -41,10 +41,9 @@
            <div class="header__conteudo">
                 <h1>contacte nos</h1>
                 <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Incidunt laborum, numquam dicta labore nam praesentium, dolor, 
-                        est quibusdam molestias explicabo placeat? Aliquam tempore officia
-                        est quasi? Ipsa laudantium cupiditate tempore.
+                    Precisa de ajuda ou tem dúvidas sobre nosso sistema para estudantes? 
+                    Estamos aqui para ouvir você! Entre em contato e 
+                    nossa equipe estará pronta para oferecer suporte e responder suas perguntas.
                 </p>
            </div>
         </div>
@@ -60,13 +59,8 @@
                 <div class="header__contactos">
                     <h1>entre em contacto</h1>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Enim minima, at tempore omnis quos sint sit aliquam ipsa
-                         reiciendis dolor odio in saepe voluptates. In laborum 
-                         quia veritatis natus iure. Lorem ipsum dolor sit amet consectetur 
-                         adipisicing elit. Ad quia sunt inventore ipsam rerum quam eum dolorem natus 
-                         perspiciatis quis sint in autem voluptas consectetur dicta,
-                          atque soluta numquam blanditiis.
+                        Quer saber mais sobre nosso sistema para estudantes? Entre em contato conosco! Estamos prontos para ouvir suas necessidades,
+                         responder suas dúvidas e oferecer todo o suporte necessário para sua experiência ser incrível.
                     </p>
                 </div>
 
