--- a/cursos/index.html
+++ b/cursos/index.html
@@ -415,7 +415,9 @@
 
             <div class="cards__courses__concluisition__Benificents">
                 <div class="card__course__conclusition__beneficent">
-                    <div class="card__course__conclusition__beneficent__icon"></div>
+                    <div class="card__course__conclusition__beneficent__icon">
+                        <i  color="#444860" data-lucide="brain"></i>
+                    </div>
                     <h2>Desenvolvimento de Habilidades Práticas</h2>
                     <span>
                         Nossos cursos garantem que você adquira competências aplicáveis 
@@ -423,14 +425,18 @@
                     </span>
                 </div>
                 <div class="card__course__conclusition__beneficent">
-                    <div class="card__course__conclusition__beneficent__icon"></div>
+                    <div class="card__course__conclusition__beneficent__icon">
+                        <i  color="#444860" data-lucide="person-standing"></i>
+                    </div>
                     <h2>Oportunidades de Networking</h2>
                     <span>
                         Conecte-se com outros estudantes e profissionais para expandir suas oportunidades de carreira
                     </span>
                 </div>
                 <div class="card__course__conclusition__beneficent">
-                    <div class="card__course__conclusition__beneficent__icon"></div>
+                    <div class="card__course__conclusition__beneficent__icon">
+                        <i  color="#444860" data-lucide="library-big"></i>
+                    </div>
                     <h2>Acesso a Recursos Exclusivos</h2>
                     <span>
 
@@ -438,7 +444,9 @@
                     </span>
                 </div>
                 <div class="card__course__conclusition__beneficent">
-                    <div class="card__course__conclusition__beneficent__icon"></div>
+                    <div class="card__course__conclusition__beneficent__icon">
+                        <i  color="#444860" data-lucide="shield-check"></i>
+                    </div>
                     <h2>Certificação Reconhecida</h2>
                     <span>
                         Ao concluir nossos cursos, 
