substituindo images na pagina home

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <div class="conteiner__info__one">
             <div class="content__container__info__one">
                 <div class="content__container__info__one__box__left content__container__info__one__box__left1__efeito">
-                    <img src="./assets/image8.jpg" alt="">
+                    <img src="./assets/image22.jpg" alt="" loading="lazy">
                 </div>
                 <div class="content__container__info__one__info__right content__container__info__one__info__right1__efeito">
                     <h2>a melhor forma de aprender  é praticando</h2>
@@ -115,7 +115,7 @@
         <div class="conteiner__info__two ">
             <div class="content__container__info__two">
                 <div class="content__container__info__two__box__left content__container__info__two__box__left2__efeito">
-                    <img src="./assets/image10.jpg" alt="">
+                    <img src="./assets/image31.jpg" alt="" loading="lazy">
                 </div>
                 <div class="content__container__info__one__info__right content__container__info__one__info__right2__efeito ">
                     <h2>Aprenda Rápido com nossas vídeo aulas</h2>
@@ -292,9 +292,9 @@
                     <div class="card__depoiment">
                         <div class="card__depoiment__header">
                             <div class="image__frame">
-                                <img src="./assets/image1.jpg" alt="">
+                                <img src="./assets/image24.jpg" alt="" loading="lazy">
                             </div>
-                            <h1>naira cuna</h1>
+                            <h1>Ana Costa</h1>
                         </div>
                         <div class="depoiment">
                             "As videoaulas são claras e os exemplos ajudam a fixar o conteúdo.
@@ -306,9 +306,9 @@
                     <div class="card__depoiment">
                         <div class="card__depoiment__header">
                             <div class="image__frame">
-                                <img src="./assets/image1.jpg" alt="">
+                                <img src="./assets/image21.jpg" alt="" loading="lazy">
                             </div>
-                            <h1>naira cuna</h1>
+                            <h1>Mariana Santos</h1>
                         </div>
                         <div class="depoiment">
                             "Com as aulas da plataforma, ficou muito mais fácil entender os conceitos.
@@ -320,7 +320,7 @@
                     <div class="card__depoiment">
                         <div class="card__depoiment__header">
                             <div class="image__frame">
-                                <img src="./assets/image1.jpg" alt="">
+                                <img src="./assets/image26.jpg" alt="" loading="lazy">
                             </div>
                             <h1>naira cuna</h1>
                         </div>
@@ -334,7 +334,7 @@
                     <div class="card__depoiment">
                         <div class="card__depoiment__header">
                             <div class="image__frame">
-                                <img src="./assets/image1.jpg" alt="">
+                                <img src="./assets/image30.jpg" alt="" loading="lazy">
                             </div>
                             <h1>naira cuna</h1>
                         </div>
