tracando os nomes na pagina home

--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                             <div class="image__frame">
                                 <img src="./assets/image26.jpg" alt="" loading="lazy">
                             </div>
-                            <h1>naira cuna</h1>
+                            <h1>Lucas Oliveira</h1>
                         </div>
                         <div class="depoiment">
                             "A plataforma facilita o aprendizado com videoaulas didáticas 
@@ -336,7 +336,7 @@
                             <div class="image__frame">
                                 <img src="./assets/image30.jpg" alt="" loading="lazy">
                             </div>
-                            <h1>naira cuna</h1>
+                            <h1>Carlos Pereira</h1>
                         </div>
                         <div class="depoiment">
                             "As videoaulas são objetivas e consigo aprender no meu ritmo.
