trocando as images dos cursos parte 1

--- a/cursos/index.html
+++ b/cursos/index.html
@@ -86,7 +86,7 @@
             <div class="courses__container">
                 <div class="course__card__container">
                     <div class="course__card__header">
-                        <img src="../assets/image1.jpg" alt="" loading="lazy">
+                        <img src="../assets/image33.jfif" alt="" loading="lazy">
                     </div>
                     <div class="course__content">
                         <div class="name__course__stars">
@@ -106,15 +106,15 @@
                             </div>
                         </div>
                     </div>
-                   
+                
                 </div>
                 <div class="course__card__container">
                     <div class="course__card__header">
-                        <img src="../assets/image3.jpg" alt="" loading="lazy">
+                        <img src="../assets/image25.jpg" alt="" loading="lazy">
                     </div>
                     <div class="course__content">
                         <div class="name__course__stars">
-                            <h2>preparação para exames escolares de admissão</h2>
+                            <h2>preparação para exames  de admissão</h2>
                             <div class="star__area">
                                 <span>5.0</span>
                                 <span class="name__course__stars__star">*</span>
@@ -134,11 +134,11 @@
                 </div>
                 <div class="course__card__container">
                     <div class="course__card__header">
-                        <img src="../assets/image4.jpg" alt="" loading="lazy">
+                        <img src="../assets/image34.jfif" alt="" loading="lazy">
                     </div>
                     <div class="course__content">
                         <div class="name__course__stars">
-                            <h2>curso de historia de Moçambique</h2>
+                            <h2>curso de  história de Moçambique</h2>
                             <div class="star__area">
                                 <span>5.0</span>
                                 <span class="name__course__stars__star">*</span>
@@ -158,11 +158,11 @@
                 </div>
                 <div class="course__card__container">
                     <div class="course__card__header">
-                        <img src="../assets/image1.jpg" alt="" loading="lazy">
+                        <img src="../assets/image38.jpg" alt="" loading="lazy">
                     </div>
                     <div class="course__content">
                         <div class="name__course__stars">
-                            <h2>marketing digital</h2>
+                            <h2>curso de programação web full stack</h2>
                             <div class="star__area">
                                 <span>5.0</span>
                                 <span class="name__course__stars__star">*</span>
@@ -182,11 +182,11 @@
                 </div>
                 <div class="course__card__container">
                     <div class="course__card__header">
-                        <img src="../assets/image3.jpg" alt="" loading="lazy">
+                        <img src="../assets/image37.jpg" alt="" loading="lazy">
                     </div>
                     <div class="course__content">
                         <div class="name__course__stars">
-                            <h2>marketing digital</h2>
+                            <h2>curso de programacao de aplicativos</h2>
                             <div class="star__area">
                                 <span>5.0</span>
                                 <span class="name__course__stars__star">*</span>
@@ -206,11 +206,11 @@
                 </div>
                 <div class="course__card__container">
                     <div class="course__card__header">
-                        <img src="../assets/image4.jpg" alt="" loading="lazy">
+                        <img src="../assets/image36.jpg" alt="" loading="lazy">
                     </div>
                     <div class="course__content">
                         <div class="name__course__stars">
-                            <h2>marketing digital</h2>
+                            <h2>curso de design de interfaces(ui)</h2>
                             <div class="star__area">
                                 <span>5.0</span>
                                 <span class="name__course__stars__star">*</span>
