modificando nomes e descricoes dos cursos na parte 1

--- a/cursos/index.html
+++ b/cursos/index.html
@@ -97,8 +97,11 @@
                             </div>
                         </div>
                         <div class="course__info">
-                            <h2>aprenda a construir de sites bonitos e responsivivos</h2>
-                            <span>html css</span>
+                            <h2>
+                               
+                                 "Prepare-se para os exames escolares e aumente suas chances de sucesso."
+                            </h2>
+                            <span>todas disciplinas</span>
                         </div>
                         <div class="course__call__to__action">
                             <div class="course__call__to__action__button">
@@ -121,8 +124,8 @@
                             </div>
                         </div>
                         <div class="course__info">
-                            <h2>aprenda a construir de sites bonitos e responsivivos</h2>
-                            <span>html css</span>
+                            <h2>"Prepare-se para os exames de admissão e conquiste sua vaga com confiança."</h2>
+                            <span>de todas universidades</span>
                         </div>
                         <div class="course__call__to__action">
                             <div class="course__call__to__action__button">
@@ -145,8 +148,8 @@
                             </div>
                         </div>
                         <div class="course__info">
-                            <h2>aprenda a construir de sites bonitos e responsivivos</h2>
-                            <span>html css</span>
+                            <h2>Descubra a história de Moçambique e compreenda  os marcos históricos .</h2>
+                            <span>cultura e tradição</span>
                         </div>
                         <div class="course__call__to__action">
                             <div class="course__call__to__action__button">
@@ -169,8 +172,8 @@
                             </div>
                         </div>
                         <div class="course__info">
-                            <h2>aprenda a construir de sites bonitos e responsivivos</h2>
-                            <span>html css</span>
+                            <h2>Aprenda programação web e crie sites modernos e responsivos do zero!</h2>
+                            <span>html css e javascript</span>
                         </div>
                         <div class="course__call__to__action">
                             <div class="course__call__to__action__button">
@@ -193,8 +196,8 @@
                             </div>
                         </div>
                         <div class="course__info">
-                            <h2>aprenda a construir de sites bonitos e responsivivos</h2>
-                            <span>html css</span>
+                            <h2>Aprenda a programar aplicativos e desenvolva soluções móveis inovadoras!</h2>
+                            <span>flutter kotlin e  react native</span>
                         </div>
                         <div class="course__call__to__action">
                             <div class="course__call__to__action__button">
@@ -217,8 +220,8 @@
                             </div>
                         </div>
                         <div class="course__info">
-                            <h2>aprenda a construir de sites bonitos e responsivivos</h2>
-                            <span>html css</span>
+                            <h2>crie interfaces atraentes e intuitivas para aplicativos e sites!</h2>
+                            <span>photoshop,adobe xd  e figma</span>
                         </div>
                         <div class="course__call__to__action">
                             <div class="course__call__to__action__button">
